[project]
name = "mass"
dynamic = ["version"]
description = "Microcalorimeter Analysis Software Suite"
authors = [
    {name = "Joe Fowler", email = "drjoefowler@gmail.com"},
    {name = "Galen O'Neil", email = "ggggggggg@github.com"},
]

requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "deprecation",
    "dill",
    "fastdtw",
    "h5py>=2.7",
    "indexedproperty",
    "lmfit>=0.9.11",
    "matplotlib>1.5",
    "numpy>=1.14",
    "packaging",
    "progress",
    "scikit-learn",
    "scipy>=0.19, !=1.11.2",
    # Bitbucket pipeline tests failed with scipy-1.11.2 but passed with 1.11.1 and 1.11.3. Weird, but remember it!
    "uncertainties",
    "xraydb",
]

[dependency-groups]
# Use `uv sync --dev` to get the development packages
dev = [
    "pytest",
    "ruff",
    "flake8",
]
# Use `uv sync --group docs` to get the packages needed to create documentation
docs = [
    "sphinx",
    "recommonmark",
]

[project.urls]
Repository = "https://github.com/usnistgov/mass.git"
Issues = "https://github.com/usnistgov/mass/issues"

[project.scripts]
ljh_truncate = "mass.ljh_truncate:main"
ljh2off = "mass.core.ljh2off:main"
make_projectors = "mass.core.projectors_script:main"


[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8", "wheel", "Cython>=0.29", "numpy>=1.14"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mass = [
    "bin/ljh_truncate",
    "calibration/nist_xray_data.dat",
    "calibration/low_z_xray_data.dat",
    "calibration/nist_asd.pickle",
]

[tool.setuptools_scm]
version_file = "mass/_version.py"

[tool.mypy]
disable_error_code = ["import-untyped"]
