[metadata]
name = mass
version = attr: mass.__version__
description = Microcalorimeter Analysis Software Suite
url = https://bitbucket.org/joe_fowler/mass
author = "Joe Fowler, Galen O'Neil"
author_email = joe.fowler@nist.gov
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages =
    mass
    mass.core
    mass.mathstat
    mass.calibration
    mass.demo
    mass.off
    mass.materials
package_dir = mass=mass
install_requires =
    cycler
    deprecated
    dill
    fastdtw
    h5py>=2.7
    lmfit>=0.9.11
    matplotlib>1.5
    numpy>=1.11
    packaging
    palettable
    pandas
    progress
    pytest
    scikit-learn
    scipy>=0.19
    scipy<1.11.2  # TODO: fix the underlying problem, but for now avoid scipy 1.11.2
    statsmodels>0.8
    uncertainties
    xraydb
scripts = bin/ljh_truncate

[options.entry_points]
console_scripts =
    ljh2off=mass.core.ljh2off:main
    make_projectors=mass.core.projectors_script:main

[options.package_data]
mass.calibration =
    nist_xray_data.dat
    low_z_xray_data.dat
    nist_asd.pickle

[autopep8]
max-line-length = 135
exclude = build,nonstandard,*_form_ui.py

[pycodestyle]
max-line-length = 135
exclude = build,nonstandard,*_form_ui.py
