# scripts = bin/ljh_truncate

# [options.entry_points]
# console_scripts =
#     ljh2off=mass.core.ljh2off:main
#     make_projectors=mass.core.projectors_script:main

[autopep8]
max-line-length = 135
exclude = build,nonstandard,*_form_ui.py

[pycodestyle]
max-line-length = 135
exclude = build,nonstandard,*_form_ui.py
